--- a/app/views/shared/_cancel_action_modal.html.slim
+++ b/app/views/shared/_cancel_action_modal.html.slim
@@ -1,7 +1,8 @@
 - app_flow = idv ? 'idv' : 'sign_up'
-- sp_name = decorated_session.sp_name ? decorated_session.sp_name : t("#{app_flow}.sp_name.default")
 - warning_disclaimer = t("#{app_flow}.cancel.warning_disclaimer")
-- warning_point = t("#{app_flow}.cancel.warning_point").gsub('SP_NAME', "<span class='bold'>#{sp_name}</span>").gsub('DISCLAIMER', "<span class='italic'>#{warning_disclaimer}</span>")
+- warning_point = t("#{app_flow}.cancel.warning_point")
+- warning_point = warning_disclaimer ? warning_point.gsub('DISCLAIMER', "<span class='italic'>#{warning_disclaimer}</span>") : warning_point
+- warning_point = sp_name ? warning_point.gsub('SP_NAME', "<span class='bold'>#{sp_name}</span>") : warning_point
 #cancel-action-modal.display-none
   = render layout: 'shared/modal_layout' do
     .p3.sm-p4.cntnr-xxskinny.border-box.bg-white.rounded-xxl.lg.modal-warning
