--- a/app/views/users/two_factor_authentication_setup/index.html.slim
+++ b/app/views/users/two_factor_authentication_setup/index.html.slim
@@ -24,4 +24,4 @@ p.mt-tiny.mb0
   = render 'users/shared/otp_delivery_preference_selection'
   = f.button :submit, t('forms.buttons.send_security_code')
 
-= render 'shared/cancel', link: destroy_user_session_path
+= render 'shared/cancel', link: destroy_user_session_path, decorated_session: decorated_session
