--- a/app/views/verify/finance/new.html.slim
+++ b/app/views/verify/finance/new.html.slim
@@ -28,7 +28,7 @@ p.mt-tiny.mb0
           = t('idv.messages.finance.disclaimer', app_name: APP_NAME)
 
       = f.button :submit, t('forms.buttons.continue'), class: 'col-6'
-
-= render 'shared/cancel', link: verify_cancel_path
+      = f.button :submit, decorated_session.methods, class: 'col-6'
+= render 'shared/cancel', link: verify_cancel_path, decorated_session: decorated_session
 
 = render @view_model.modal_partial, view_model: @view_model
