--- a/app/views/verify/index.html.slim
+++ b/app/views/verify/index.html.slim
@@ -34,4 +34,4 @@ p.mb3 = t('idv.index.paragraph_1')
 p.mb3.bold = t('idv.index.prompt')
 = link_to t('idv.index.continue_link'), verify_session_path, class: 'btn btn-primary btn-wide'
 
-= render 'shared/cancel', link: verify_cancel_path
+= render 'shared/cancel', link: verify_cancel_path, decorated_session: decorated_session
