--- a/app/views/verify/usps/index.html.slim
+++ b/app/views/verify/usps/index.html.slim
@@ -14,3 +14,6 @@
   class: 'btn btn-primary btn-wide', form_class: 'inline-block mr2'
 
 = link_to t('idv.messages.usps.bad_address'), verify_phone_path
+
+.mt2
+  = link_to t('idv.buttons.return_to_verify'), verify_address_path
