code review changes

--- a/app/views/shared/_cancel.html.slim
+++ b/app/views/shared/_cancel.html.slim
@@ -1,5 +1,5 @@
 - cancel = sign_up_or_idv_no_js_link || link
-- decorated_session = decorated_session || nil
+- decorated_session = decorated_session
 - sp_name = decorated_session ? decorated_session.sp_name : ''
 
 .mt2.pt1.border-top
