Updated fields in the ux

--- a/app/views/verify/finance_other/new.html.slim
+++ b/app/views/verify/finance_other/new.html.slim
@@ -29,7 +29,7 @@ p.mt-tiny.mb0 = t('idv.messages.finance.intro_account')
                  disabled: true,
                  class: 'col-12 mb3 js-finance-submit'
 .mb1
-  = link_to t('idv.messages.finance.no_account'), verify_finance_path, class: 'tiny bold'
+  = link_to t('idv.messages.finance.no_account'), verify_finance_path, class: 'tiny'
 p.mb3
   = t('idv.messages.finance.no_account_info')
 
