--- a/app/views/verify/finance/new.html.slim
+++ b/app/views/verify/finance/new.html.slim
@@ -25,7 +25,10 @@ p.mt-tiny.mb0
 
       .mb2.mt3
         em
-          = t('idv.messages.finance.disclaimer', app_name: APP_NAME)
+          - disclaimer_qualifier = "<span class='bold'>#{t('idv.messages.finance.disclaimer_qualifier')}</span>"
+          = t('idv.messages.finance.disclaimer',
+            app_name: APP_NAME,
+            disclaimer_qualifier: disclaimer_qualifier).html_safe
 
       = f.button :submit, t('forms.buttons.continue'), class: 'col-6'
 
