--- a/app/views/sign_up/registrations/new.html.slim
+++ b/app/views/sign_up/registrations/new.html.slim
@@ -1,7 +1,7 @@
 - title t('titles.registrations.new')
 
 h1.h3.my0 = t('headings.registrations.enter_email')
-p.mt-tiny.mb0#email-description = t('instructions.registration.email')
+label.sr-only#email-description = t('instructions.registration.email')
 = simple_form_for(@register_user_email_form,
     html: { autocomplete: 'off', role: 'form' },
     url: sign_up_register_path) do |f|
