--- a/app/views/verify/address/index.html.slim
+++ b/app/views/verify/address/index.html.slim
@@ -12,4 +12,4 @@ p
       = link_to t('idv.buttons.activate_by_mail'), verify_usps_path,
         class: 'btn btn-outline rounded-lg mb2 center'
 
-= render 'shared/cancel', link: verify_cancel_path, decorated_session: decorated_session
+= render 'shared/cancel', link: verify_cancel_path
