--- a/app/views/shared/_cancel.html.slim
+++ b/app/views/shared/_cancel.html.slim
@@ -1,6 +1,4 @@
 - cancel = sign_up_or_idv_no_js_link || link
-- decorated_session = decorated_session
-- sp_name = decorated_session ? decorated_session.sp_name : ''
 
 .mt2.pt1.border-top
   - if user_signing_up? || user_verifying_identity?
@@ -10,7 +8,6 @@
       class: 'btn btn-link', id: 'auth-flow-cancel'
     = render 'shared/cancel_action_modal',
       idv: user_verifying_identity?,
-      user_signing_up: user_signing_up?,
-      sp_name: sp_name
+      user_signing_up: user_signing_up?
   - else
     = link_to cancel_link_text, cancel, class: 'h5'
