--- a/app/views/shared/_cancel_action_modal.html.slim
+++ b/app/views/shared/_cancel_action_modal.html.slim
@@ -1,7 +1,7 @@
 - app_flow = idv ? 'idv' : 'sign_up'
 - warning_qualifier = content_tag(:span, t("#{app_flow}.cancel.warning_qualifier"),
   class: 'italic')
-
+- sp_name = decorated_session.sp_name
 #cancel-action-modal.display-none
   = render layout: 'shared/modal_layout' do
     .p3.sm-p4.cntnr-xxskinny.border-box.bg-white.rounded-xxl.lg.modal-warning
