--- a/app/views/shared/_cancel_action_modal.html.slim
+++ b/app/views/shared/_cancel_action_modal.html.slim
@@ -1,7 +1,4 @@
 - app_flow = idv ? 'idv' : 'sign_up'
-- warning_qualifier = content_tag(:span, t("#{app_flow}.cancel.warning_qualifier"),
-  class: 'italic')
-- sp_name = decorated_session.sp_name
 #cancel-action-modal.display-none
   = render layout: 'shared/modal_layout' do
     .p3.sm-p4.cntnr-xxskinny.border-box.bg-white.rounded-xxl.lg.modal-warning
@@ -12,15 +9,7 @@
           = t("#{app_flow}.cancel.warning_header")
         ul.px2.yellow-dots
           li.mb2
-            - if sp_name
-              - sp_name_tag = content_tag(:span, sp_name, class: 'bold')
-              - warning_point_text = t("#{app_flow}.cancel.warning_point",
-                sp_name: sp_name_tag, warning_qualifier: warning_qualifier)
-              = safe_join(split_tag(split_tag(warning_point_text, sp_name_tag), warning_qualifier))
-            - else
-              - warning_point_text = t("#{app_flow}.cancel.warning_point_no_sp",
-                warning_qualifier: warning_qualifier)
-              = safe_join(split_tag(warning_point_text, warning_qualifier))
+            = decorated_session.warning_point_text(app_flow)
           - t("#{app_flow}.cancel.warning_points").each do |point|
             li.mb2
               = point
